--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: context_extension
-description: "A new Flutter package project."
+description: "common extension for context"
 version: 0.0.1
-homepage:
+author: Mohit Koley
+homepage: https://github.com/Mohitkoley/common_extension.git
 
 environment:
   sdk: ^3.5.3
@@ -20,7 +21,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+# flutter: 
 
   # To add assets to your package, add an assets section, like this:
   # assets:
